--- a/UltimateCopperShortsword.csproj
+++ b/UltimateCopperShortsword.csproj
@@ -7,6 +7,9 @@
 	<PropertyGroup>
 		
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Remove="Assets\Skys\SkyEffect.png" />
+	</ItemGroup>
 
 	<!-- References -->
 
